--- a/style.css
+++ b/style.css
@@ -6,67 +6,118 @@ ul,
 li {
     margin: 0;
     padding: 0;
-    list-style: none;
+}
+
+* {
+    box-sizing: border-box;
 }
 
 body {
-    font-family: 'Arial', sans-serif;
-    font-size: 16px;
+    font-family: 'Gill Sans', 'Gill Sans MT', 'Trebuchet MS', sans-serif;
     line-height: 1.6;
-    color: #000000;
+    color: #201d1d;
+    background: #c1c5c6;
 }
 
 .container {
-    width: 80%;
+    width: 100%;
     margin: 0 auto;
 }
 
 header {
-    background-color: #920a0a;
+    background: linear-gradient(to right, #3498db, #333);
     color: #fff;
+    text-align: center;
     padding: 20px 0;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
 
 header h1 {
-    font-size: 2em;
+    font-size: 2.5em;
 }
 
 header p {
     font-size: 1.2em;
 }
 
-section {
-    margin: 40px 0;
+.header {
+    background: #333;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 20px;
 }
 
-h2 {
-    color: #000000;
-    border-bottom: 2px solid #920a0a;
-    padding-bottom: 10px;
+.header ul {
+    list-style: none;
+    display: flex;
+}
+
+.header li {
+    margin-right: 20px;
+}
+
+.header a {
+    display: inline-block;
+    padding: 15px 20px;
+    color: #fff;
+    text-decoration: none;
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
+}
+
+.header a:hover {
+    background-color: #555;
+}
+
+section {
+    padding: 60px 0;
+}
+
+section h2 {
+    font-size: 2em;
+    margin-bottom: 30px;
+}
+
+section img {
+    max-width: 80%;
+    height: auto;
+    margin-bottom: 20px;
+    border-radius: 20px;
+    border: 2px solid #333;
 }
 
 section p {
-    line-height: 1.5;
+    font-size: 20px;
 }
 
 footer {
     background-color: #333;
     color: #fff;
-    padding: 10px 0;
     text-align: center;
-}
-
-a {
-    color: #6e96c0;
-    text-decoration: none;
-}
-
-a:hover {
-    text-decoration: underline;
+    padding: 15px 0;
 }
 
 @media screen and (max-width: 768px) {
     .container {
         width: 90%;
+    }
+
+    header p,
+    header h1,
+    section p {
+        font-size: 20x;
+    }
+
+    .header a {
+        padding: 10px 15px;
+    }
+
+    section {
+        padding: 40px 0;
+    }
+
+    footer {
+        padding: 10px 0;
     }
 }
